--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/img/headlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <!-- Font Family Link End -->
-    <title>Gundars Portfolio</title>
+    <title>Gundars Geida</title>
   </head>
   <body>
     <div id="root"></div>
